# bidding

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  git_test.txt  架构.md
architecture/: Milvus 入库设计方案.md  admin-backend.html  architecture.md  user-chat.html
backend/: .env.example  .gitignore  Dockerfile  bidding_demo.db  init_db.py  pyproject.toml  test_delete.py  test_pipeline.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  auth.py  chat.py  document.py  knowledge_base.py  users.py
backend/app/core/: config.py  exceptions.py  middlewares.py  security.py
backend/app/models/: database.py  domain.py
backend/app/rag/: vector_store.py
backend/app/services/: llm_service.py  rag_service.py
backend/scripts/: clear_data.py  generate_mock_data.py  import_real_data.py  init_prod.sh  reset_db.py
data/: company.csv  law.csv  milvus_company.csv  milvus_law.csv  milvus_product.csv  milvus_zhaobiao.csv  milvus_zhongbiao.csv  mysql_company.csv  mysql_law.csv  mysql_product.csv  mysql_zhaobiao.csv  mysql_zhongbiao.csv  product.csv  sample_company.csv  zhaobiao.csv  zhongbiao.csv  数据库文档.md
docs/: architecture.md
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: request.ts
frontend/src/components/: BrandMark.vue
frontend/src/router/: index.ts
frontend/src/views/: Admin.vue  AdminDashboard.vue  AdminLogin.vue  Chat.vue  DocumentList.vue  KnowledgeBase.vue  Login.vue  Register.vue
